--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -2,16 +2,20 @@
   min-height: 637px;
 }
 
+.u-section-1 .u-sheet-1 {
+  min-height: 637px;
+}
+
 .u-section-1 .u-image-1 {
   width: 498px;
   height: 499px;
-  margin: -75px auto 0 742px;
+  margin: -75px 72px 0 auto;
 }
 
 .u-section-1 .u-image-2 {
   width: 370px;
   height: 300px;
-  margin: -400px auto 0 0;
+  margin: -399px auto 0 164px;
 }
 
 .u-section-1 .u-text-1 {
@@ -26,30 +30,15 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-image-1 {
-    margin-left: 492px;
-  }
-
-  .u-section-1 .u-image-2 {
-    margin-left: 50px;
+    margin-left: 542px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-image-1 {
     width: 465px;
-    margin-right: 0;
+    margin-right: 160px;
     margin-left: auto;
-  }
-
-  .u-section-1 .u-image-2 {
-    margin-top: -409px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 101px;
-    margin-left: 35px;
-    margin-right: 35px;
   }
 }
 
@@ -58,18 +47,7 @@
     width: 305px;
     height: 370px;
     margin-top: -67px;
-  }
-
-  .u-section-1 .u-image-2 {
-    width: 239px;
-    height: 196px;
-    margin-top: -283px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 200px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-right: 250px;
   }
 
   .u-section-1 .u-text-2 {
@@ -82,23 +60,26 @@
     min-height: 575px;
   }
 
+  .u-section-1 .u-sheet-1 {
+    min-height: 575px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 238px;
     height: 256px;
     margin-top: 174px;
-    margin-right: auto;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-2 {
-    width: 269px;
-    height: 219px;
-    margin-top: -430px;
-    margin-left: auto;
+    width: 340px;
+    height: 276px;
+    margin-top: -241px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 2.25rem;
-    margin-top: 173px;
   }
 } .u-section-2 {
   background-image: none;
@@ -642,8 +623,8 @@
   width: 240px;
   height: 240px;
   object-position: 50% 94.17%;
-  background-image: url("images/6.jpg");
-  background-position: 50% 50%;
+  background-image: url("images/Celo2.jpg");
+  background-position: 50% 36.27%;
   margin: 0 auto;
 }
 
@@ -707,11 +688,11 @@
     padding-right: 10px;
   }
 }.u-section-8 .u-sheet-1 {
-  min-height: 854px;
+  min-height: 944px;
 }
 
 .u-section-8 .u-list-1 {
-  margin-top: 1px;
+  margin-top: 90px;
   margin-bottom: 1px;
 }
 
